# switchablegraphics

./: .gitignore  CMakeLists.txt  README  TODO  switchablegraphics.kdev4  switchablegraphics.lokalize
common/: dbusdefs.cpp  dbusdefs.h  switchablegraphics.xml
i18n/: CMakeLists.txt  Messages.sh  SwitchableGraphics.pot  it.po  switchablegraphics.pot
kcm/: CMakeLists.txt  config.ui  switchablegraphics.cpp  switchablegraphics.h  switchablegraphicsconfig.desktop  switchablegraphicsconfig.ui
kded/: CMakeLists.txt  backendmanager.cpp  backendmanager.h  dbusdefs.h  switchablegraphics.cpp  switchablegraphics.desktop  switchablegraphics.h
kded/backends/: CMakeLists.txt  switcherbackend.cpp  switcherbackend.h
kded/backends/kauth/: CMakeLists.txt  switchablegraphics.actions  switchablegraphicshelper.cpp  switchablegraphicshelper.h
kded/backends/null/: nullbackend.cpp  nullbackend.h
kded/backends/vgaswitcheroo/: vgaswitcheroobackend.cpp  vgaswitcheroobackend.h
src/: CMakeLists.txt  Messages.sh  main.cpp  switchablegraphics.cpp  switchablegraphics.desktop  switchablegraphics.h
